--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,15 @@ services:
       - "./apps/test2:/app"
     command: ['Rscript', '-e', "shiny::runApp('/app', host = '0.0.0.0', port = 3838)"]
   shinyproxy:
-    build: ./shinyproxy
+    build: 
+      context: .
+      dockerfile: shinyproxy/Dockerfile
     ports:
-      - 8080:8080
+      - 8085:8080
     environment: 
       - "WORK_DIR=${PWD}"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "./shinyproxy-logs/server:/log"
       - "./shinyproxy-logs/container:/container-logs"
-      - "./shinyproxy:/opt/shinyproxy"
+
